// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Albums 2 Onboarding should mount on desktop 1`] = `
<Connect(OnboardingBase)
  buttonContent="Перейти в Альбомы"
  cls="albums2-onboarding-geo"
  metrikaContext="geo albums onboarding"
  metrikaPath={
    Array [
      "interface elements",
      "albums2 block",
    ]
  }
  onButtonClick={[Function]}
  settingName="geoAlbumsOnboardingClosed"
  textContent={
    <I18N
      loc="Все фото из ваших путешествий в0новом альбоме."
    >
      <span>
         
      </span>
    </I18N>
  }
  titleContent="Альбом «Места и поездки»"
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "albums2-onboarding-geo",
          "elem": "image-wrapper",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <img
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "albums2-onboarding-geo",
            "elem": "image",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      src="https://yandex.static.net"
      srcSet="https://yandex.static.net 2x, https://yandex.static.net 3x"
    />
  </div>
</Connect(OnboardingBase)>
`;

exports[`Albums 2 Onboarding should mount on smart phone 1`] = `
<Connect(OnboardingBase)
  buttonContent="Перейти в Альбомы"
  cls="albums2-onboarding-geo albums2-onboarding-geo_touch"
  metrikaContext="geo albums onboarding"
  metrikaPath={
    Array [
      "interface elements",
      "albums2 block",
    ]
  }
  onButtonClick={[Function]}
  settingName="geoAlbumsOnboardingClosed"
  textContent={
    <I18N
      loc="Все фото из ваших путешествий в0новом альбоме."
    >
      <span>
         
      </span>
    </I18N>
  }
  titleContent="Альбом
«Места и поездки»"
>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "albums2-onboarding-geo",
          "elem": "image-wrapper",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <img
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "albums2-onboarding-geo",
            "elem": "image",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      src="https://yandex.static.net"
      srcSet="https://yandex.static.net 2x, https://yandex.static.net 3x"
    />
  </div>
</Connect(OnboardingBase)>
`;
